rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h350_2011_CommObject.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h350_2011_CommObject.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod comm_object {
    extern crate alloc;
    use super::comm_uri::{CASE_IGNORE_IA5_MATCH, CASE_IGNORE_IA5_SUBSTRINGS_MATCH, H350_CR};
    use super::information_framework::*;
    use super::selected_attribute_types::{UnboundedDirectoryString, CASE_EXACT_MATCH};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static AT: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***CO, &[1u32]].concat()).unwrap().to_owned());
    pub static CO: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***H350_CR, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static OC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***CO, &[2u32]].concat()).unwrap().to_owned());
}
