rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h450.10_2001_Call-Offer-Operations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h450.10_2001_Call-Offer-Operations.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve reference in object set.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod call_offer_operations {
    extern crate alloc;
    use super::call_hold_operations::MixedExtension;
    use super::call_waiting_operations::CALL_WAITING;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct CfbOvrOptArg {
        #[rasn(size("0..=255"))]
        pub extension: Option<SequenceOf<MixedExtension>>,
    }
    impl CfbOvrOptArg {
        pub fn new(extension: Option<SequenceOf<MixedExtension>>) -> Self {
            Self { extension }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct CoReqOptArg {
        #[rasn(size("0..=255"))]
        pub extension: Option<SequenceOf<MixedExtension>>,
    }
    impl CoReqOptArg {
        pub fn new(extension: Option<SequenceOf<MixedExtension>>) -> Self {
            Self { extension }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct RUAlertOptArg {
        #[rasn(size("0..=255"))]
        pub extension: Option<SequenceOf<MixedExtension>>,
    }
    impl RUAlertOptArg {
        pub fn new(extension: Option<SequenceOf<MixedExtension>>) -> Self {
            Self { extension }
        }
    }
}
