rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h450.1_2011_Manufacturer-specific-service-extension-definition.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h450.1_2011_Manufacturer-specific-service-extension-definition.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod manufacturer_specific_service_extension_definition {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
